Update BUG-001 report with implementation details

--- a/bug_reports/BUG-001.md
+++ b/bug_reports/BUG-001.md
@@ -193,7 +193,7 @@ pytest -xvs
 ## Implementation (filled by Implementer)
 
 - **Implemented by**: W-1764997785-9581
-- **Commit**: [pending]
+- **Commit**: 675ee92
 - **Regression test file**: `tests/server/tools/test_ghap.py::test_bug_001_schema_validation_alignment`
 
 ### Changes Made
