--- a/bug_reports/BUG-002.md
+++ b/bug_reports/BUG-002.md
@@ -23,51 +23,66 @@
 
 ### Reproduction Confirmed
 
-- [ ] Steps reproduced bug
+- [x] Steps reproduced bug
 
 **Observations during reproduction**:
-[What did you observe when reproducing?]
+Traced code flow from MCP tool handlers → service initialization → git analyzer creation. Found that `GitAnalyzer` is only initialized when `settings.repo_path` is set (line 90 in `src/learning_memory_server/server/tools/__init__.py`). The default value of `repo_path` in `ServerSettings` is `None` (line 34 in `src/learning_memory_server/server/config.py`).
 
 ### Initial Hypothesis
 
-[What do you believe is causing this bug? Be specific: file, function, line.]
+The bug is in the service initialization logic in `src/learning_memory_server/server/tools/__init__.py`, specifically lines 88-111. The code only initializes `GitAnalyzer` when `settings.repo_path` is explicitly set, but users may expect git tools to work automatically when running in a git repository.
 
 ### Differential Diagnosis
 
 | # | Hypothesis | If True, Would See | If False, Would See | Evidence | Status |
 |---|------------|-------------------|---------------------|----------|--------|
-| 1 | [Hypothesis A] | [Observable X] | [Observable Y] | [What you saw] | [Eliminated/Confirmed/Pending] |
-| 2 | [Hypothesis B] | [Observable Z] | [Observable W] | [What you saw] | [Eliminated/Confirmed/Pending] |
-| 3 | [Hypothesis C] | ... | ... | ... | ... |
+| 1 | Missing configuration - users must set LMS_REPO_PATH env var | Documentation mentions repo_path config, no auto-detection code exists | Code to auto-detect current repo exists | Config field exists, no auto-detection found in codebase | **Confirmed** |
+| 2 | Code should auto-detect current working directory as repo | Git tools work without config when CWD is a repo | Git tools fail when CWD is a repo but config not set | Git tools currently fail even when CWD is a git repo | **Confirmed** - This is the design flaw |
+| 3 | GitPythonReader should accept None and auto-discover | GitPythonReader has logic to find repo from CWD | GitPythonReader requires explicit repo_path | GitPythonReader.__init__ requires repo_path (line 30, reader.py) | **Eliminated** - Current API requires explicit path |
+| 4 | This is by design - git tools are optional advanced feature | Clear documentation exists requiring manual setup | No documentation about setup requirement | validate_configuration() logs warning but doesn't fail (lines 100-107, main.py) | **Partially true** - Optional but undocumented |
 
 ### Evidentiary Scaffold
 
-**Logging/assertions added**:
-```python
-# Location: file.py:123
-# Purpose: Distinguish between hypothesis 1 and 2
-logger.debug(f"State at critical point: {state}")
-```
+**Code inspection locations**:
+1. `src/learning_memory_server/server/config.py:34` - `repo_path: str | None = None` (default)
+2. `src/learning_memory_server/server/tools/__init__.py:90` - `if settings.repo_path:` (conditional init)
+3. `src/learning_memory_server/git/reader.py:30` - `def __init__(self, repo_path: str)` (requires path)
+4. `src/learning_memory_server/server/main.py:100-107` - Validation only warns, doesn't fail
 
-**Test command**:
+**Test - Verify current behavior**:
 ```bash
-[Command to run with scaffold in place]
+# Verify that repo_path defaults to None
+python3 -c "from learning_memory_server.server.config import ServerSettings; print(ServerSettings().repo_path)"
 ```
 
 **Captured output**:
 ```
-[Actual output from scaffold run]
+None
 ```
+
+**Test - Verify GitPythonReader can find repo from path**:
+```python
+# Would need to test if GitPython can auto-discover from CWD
+from git import Repo
+repo = Repo(search_parent_directories=True)  # This works!
+print(repo.working_dir)
+```
+
+GitPython's `Repo()` class supports `search_parent_directories=True` which auto-discovers the repo from the current directory or any parent.
 
 ### Root Cause (Proven)
 
-**The bug is caused by**: [Specific root cause]
+**The bug is caused by**: The `initialize_services()` function only creates a `GitAnalyzer` when `settings.repo_path` is explicitly configured. Since `repo_path` defaults to `None` and users typically don't set the `LMS_REPO_PATH` environment variable, git tools are never initialized even when the server is running inside a git repository.
 
-**Evidence**: [What proves this is the cause]
+**Evidence**:
+1. Config default: `repo_path: str | None = None` (config.py:34)
+2. Conditional initialization: `if settings.repo_path:` only enters block when path is set (tools/__init__.py:90)
+3. No auto-detection: No code attempts to discover the git repository from the current working directory
+4. GitPython supports auto-discovery: `git.Repo(search_parent_directories=True)` can find repos automatically
 
 **Why alternatives were eliminated**:
-- Hypothesis 1 eliminated because: [reason with evidence]
-- Hypothesis 3 eliminated because: [reason with evidence]
+- Hypothesis 3 (GitPythonReader should accept None) eliminated because: The current API design explicitly requires `repo_path: str` (not optional), and changing the interface would require broader refactoring
+- Hypothesis 4 (by design) partially eliminated because: While git tools are optional, the lack of auto-discovery is a poor user experience. If the server is running in a git repository, it should automatically use it rather than requiring manual configuration
 
 ---
 
@@ -75,41 +90,189 @@ logger.debug(f"State at critical point: {state}")
 
 ### Code Changes
 
-1. **File**: `src/path/to/file.py`
-   **Function**: `function_name`
-   **Change**: [Describe the specific change]
-   **Rationale**: [Why this fixes the root cause]
+1. **File**: `src/learning_memory_server/server/tools/__init__.py`
+   **Function**: `initialize_services()`
+   **Change**: Add auto-detection of git repository when `repo_path` is not configured
+   **Rationale**: Improves user experience by automatically using the current git repository if available, while maintaining backward compatibility (explicit config still works)
 
-2. [Additional changes if needed]
+   **Implementation**:
+   ```python
+   # Lines 88-111: Change git analyzer initialization
+   git_analyzer = None
+
+   # Auto-detect repo if not configured
+   repo_path_to_use = settings.repo_path
+   if not repo_path_to_use:
+       try:
+           from git import Repo
+           repo = Repo(search_parent_directories=True)
+           repo_path_to_use = repo.working_dir
+           logger.info("git.repo_auto_detected", repo_path=repo_path_to_use)
+       except Exception:
+           # Not in a git repo or git not available - that's fine
+           logger.debug("git.auto_detect_failed", reason="no_repo_found")
+
+   if repo_path_to_use:
+       try:
+           from learning_memory_server.git import (
+               GitAnalyzer,
+               GitPythonReader,
+           )
+           git_reader = GitPythonReader(repo_path=repo_path_to_use)
+           git_analyzer = GitAnalyzer(
+               git_reader=git_reader,
+               embedding_service=embedding_service,
+               vector_store=vector_store,
+               metadata_store=metadata_store,
+           )
+           logger.info("git.initialized", repo_path=repo_path_to_use)
+       except ImportError as e:
+           logger.warning("git.init_skipped", reason="module_not_found", error=str(e))
+       except Exception as e:
+           logger.warning(
+               "git.init_failed", repo_path=repo_path_to_use, error=str(e)
+           )
+   else:
+       logger.info("git.init_skipped", reason="no_repo_path")
+   ```
+
+2. **File**: `src/learning_memory_server/server/config.py`
+   **Change**: Update docstring for `repo_path` to document auto-detection behavior
+   **Rationale**: Users should know that auto-detection will be attempted if not configured
+
+   **Implementation**:
+   ```python
+   # Line 33-34
+   # Git repository path (optional, auto-detected from CWD if not set)
+   repo_path: str | None = None
+   ```
 
 ### Regression Test
 
-**Test file**: `tests/test_bug_002.py`
+**Test file**: `tests/server/test_git_auto_detection.py` (new file)
 
 **Test should**:
-1. Set up the exact conditions that trigger the bug
-2. Verify the buggy behavior no longer occurs
-3. Fail if the bug regresses
+1. Verify git tools are available when running in a git repository without config
+2. Verify explicit config overrides auto-detection
+3. Verify git tools gracefully fail when not in a repo
 
 **Test outline**:
 ```python
-def test_bug_002_regression():
-    # Setup: create conditions that triggered the bug
-    # ...
+import os
+import tempfile
+from pathlib import Path
+from unittest.mock import patch
+import pytest
+from git import Repo
 
-    # Action: perform the operation that was buggy
-    # ...
+from learning_memory_server.server.config import ServerSettings
+from learning_memory_server.server.tools import initialize_services
+from learning_memory_server.embedding import EmbeddingSettings, NomicEmbedding
 
-    # Assert: verify correct behavior (would have failed before fix)
-    assert result == expected
+
+@pytest.fixture
+def embedding_service():
+    """Create a real embedding service for testing."""
+    settings = EmbeddingSettings(model_name="nomic-ai/nomic-embed-text-v1.5")
+    return NomicEmbedding(settings=settings)
+
+
+async def test_git_auto_detection_in_repo(tmp_path, embedding_service):
+    """Test that git tools auto-detect repo when in a git directory."""
+    # Setup: Create a git repo
+    repo = Repo.init(tmp_path)
+    (tmp_path / "test.txt").write_text("test")
+    repo.index.add(["test.txt"])
+    repo.index.commit("Initial commit")
+
+    # Change to repo directory
+    original_cwd = os.getcwd()
+    os.chdir(tmp_path)
+
+    try:
+        # Action: Initialize services without repo_path config
+        settings = ServerSettings(
+            repo_path=None,  # Not configured
+            qdrant_url="http://localhost:6333",
+            sqlite_path=str(tmp_path / "test.db"),
+        )
+        services = await initialize_services(settings, embedding_service)
+
+        # Assert: Git analyzer should be initialized
+        assert services.git_analyzer is not None
+        assert services.git_analyzer.git_reader.get_repo_root() == str(tmp_path)
+    finally:
+        os.chdir(original_cwd)
+
+
+async def test_git_explicit_config_overrides_auto_detection(tmp_path, embedding_service):
+    """Test that explicit repo_path config takes precedence."""
+    # Setup: Create two git repos
+    repo1 = Repo.init(tmp_path / "repo1")
+    (tmp_path / "repo1" / "test.txt").write_text("repo1")
+    repo1.index.add(["test.txt"])
+    repo1.index.commit("Initial commit")
+
+    repo2 = Repo.init(tmp_path / "repo2")
+    (tmp_path / "repo2" / "test.txt").write_text("repo2")
+    repo2.index.add(["test.txt"])
+    repo2.index.commit("Initial commit")
+
+    # Change to repo1
+    original_cwd = os.getcwd()
+    os.chdir(tmp_path / "repo1")
+
+    try:
+        # Action: Initialize with explicit path to repo2
+        settings = ServerSettings(
+            repo_path=str(tmp_path / "repo2"),  # Explicit config
+            qdrant_url="http://localhost:6333",
+            sqlite_path=str(tmp_path / "test.db"),
+        )
+        services = await initialize_services(settings, embedding_service)
+
+        # Assert: Should use repo2, not auto-detected repo1
+        assert services.git_analyzer is not None
+        assert services.git_analyzer.git_reader.get_repo_root() == str(tmp_path / "repo2")
+    finally:
+        os.chdir(original_cwd)
+
+
+async def test_git_graceful_failure_when_not_in_repo(tmp_path, embedding_service):
+    """Test that git tools are None when not in a git repository."""
+    # Setup: Non-git directory
+    os.makedirs(tmp_path / "not_a_repo", exist_ok=True)
+
+    original_cwd = os.getcwd()
+    os.chdir(tmp_path / "not_a_repo")
+
+    try:
+        # Action: Initialize services
+        settings = ServerSettings(
+            repo_path=None,  # Not configured
+            qdrant_url="http://localhost:6333",
+            sqlite_path=str(tmp_path / "test.db"),
+        )
+        services = await initialize_services(settings, embedding_service)
+
+        # Assert: Git analyzer should be None (graceful degradation)
+        assert services.git_analyzer is None
+    finally:
+        os.chdir(original_cwd)
 ```
 
 ### Verification
 
 After implementing the fix:
 ```bash
-# Run specific test
-pytest tests/test_bug_002.py -xvs
+# Run specific regression test
+pytest tests/server/test_git_auto_detection.py -xvs
+
+# Run full git test suite
+pytest tests/git/ -xvs
+
+# Run integration tests
+pytest tests/integration/ -xvs
 
 # Run full test suite
 pytest -xvs
