Update bug report with regression test info

--- a/bug_reports/BUG-007.md
+++ b/bug_reports/BUG-007.md
@@ -97,8 +97,8 @@ After implementing the fix:
 ## Implementation (filled by Implementer)
 
 - **Implemented by**: infra worker
-- **Commit**: 8e34b53
-- **Regression test file**: N/A (infrastructure fix)
+- **Commit**: 8e34b53 (fix), 42db17c (regression test)
+- **Regression test file**: tests/gates/test_check_types.py
 
 ### Changes Made
 
@@ -116,6 +116,8 @@ if ! TOKENIZERS_PARALLELISM=false uv run mypy --strict src/ 2>&1; then
 ```
 
 Verified that mypy now completes successfully (found 10 pre-existing type errors, but completed execution without hanging).
+
+Added regression test at `tests/gates/test_check_types.py` that verifies the gate script completes within 60 seconds (would hang indefinitely before the fix).
 
 ---
 
