BUG-056: Update bug report with commit SHAs

--- a/bug_reports/BUG-056.md
+++ b/bug_reports/BUG-056.md
@@ -118,7 +118,7 @@ pre-commit run subprocess-stdin-check --files /tmp/test.py
 ## Implementation (filled by Implementer)
 
 - **Implemented by**: W-1765688937-35828
-- **Commit**: (pending)
+- **Commit**: 6253951, 5d124cb
 - **Regression test file**: tests/hooks/test_bug_056_regression.py
 
 ### Changes Made
