--- a/changelog.d/BUG-071.md
+++ b/changelog.d/BUG-071.md
@@ -1,9 +1,15 @@
-## BUG-071: Session start hook not using configurable port and host
+## BUG-071: Fix task list from worktrees, document --include-done, add next-id
 
 ### Summary
-Fixed test patterns to recognize both direct and indirect configuration patterns in session_start.sh.
+Fixed `calm task list` returning "No tasks found" when run from a worktree, documented
+the undiscoverable `--include-done` flag, and added a `calm task next-id` command.
 
 ### Changes
-- Updated test patterns to accept two-step configuration (CLAMS_HTTP_PORT -> SERVER_PORT)
-- Added comprehensive docstrings explaining valid patterns
-- Fixed E2E test failure in test_session_start_uses_configurable_port
+- Changed `create_task()` and `list_tasks()` to use `detect_main_repo()` instead of
+  `detect_project_path()`, so project filtering always uses the main repo path even
+  when running from a worktree
+- Documented the `--include-done` flag in CLAUDE.md CLI reference
+- Added `get_next_task_id()` function and `calm task next-id <BUG|SPEC>` CLI command
+  to query the next available task ID for a given prefix
+- Added 9 regression tests covering worktree path resolution, include_done filtering,
+  and next-id generation
