Fix gate check: add summary line before Fix Plan subsections

--- a/bug_reports/BUG-075.md
+++ b/bug_reports/BUG-075.md
@@ -122,6 +122,8 @@ The core issue is that all worktrees share a single Python environment with a si
 
 ## Fix Plan
 
+Three fix options were evaluated. Option A (conftest.py sys.path fix) is recommended as the primary fix, with Option B as a secondary enhancement.
+
 ### Option A: Add worktree `src/` to `sys.path` via conftest.py (Recommended - Simple)
 
 **File**: `tests/conftest.py`
